--- a/gold-admin-frontend/src/app/views/partials/components/button/button.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/button/button.component.html
@@ -4,9 +4,12 @@
     (click)="actionPerformed()">{{value | titlecase}}</button>
 <button *ngIf="type == 'button'" mat-raised-button color="primary" [ngClass]="myClass" [disabled]="isDisabled"
     class="submit" [type]="type" (click)="actionPerformed()">
-    <span *ngIf="notTitleCase else asStated" >
+    <span *ngIf="notTitleCase else asStated">
         {{value}}
     </span></button>
 <button *ngIf="type == 'normalButton'" mat-raised-button color="primary" [ngClass]="myClass" [disabled]="isDisabled"
     class="submit" [type]="type" (click)="actionPerformed()">{{value}}</button>
-    <ng-template #asStated>{{value | titlecase}}</ng-template>
+<ng-template #asStated>{{value | titlecase}}</ng-template>
+
+<button *ngIf="type == 'image'" class="global-map" color="primary" mat-raised-button type="button">
+    <img [src]="value" height="20" width="20"></button>
