--- a/gold-admin-frontend/src/app/views/partials/layout/topbar/user-profile/user-profile.component.html
+++ b/gold-admin-frontend/src/app/views/partials/layout/topbar/user-profile/user-profile.component.html
@@ -29,7 +29,8 @@
 				<div class="kt-user-card__name">
 					{{(_user?.firstName + ' ' + _user?.lastName ) | titlecase}}
 				</div>
-				<div class="kt-user-card__name">
+				<div style="color: #fff;
+				padding-left: 1rem;">
 					Role: {{_user?.roleName[0]| titlecase}}
 				</div>
 			</div>
