--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
@@ -156,7 +156,7 @@
                     <div class="col-7">
                         <select class="form-control" formControlName="paymentFrequency" (change)="getIntrest(true)"
                             [class.isError]="controls.paymentFrequency.touched && controls.paymentFrequency.invalid">
-                            <option value=null [selected]="true" [disabled]="true">Select Payment Frequency</option>
+                            <option value=null selected="true" disabled="true">Select Payment Frequency</option>
                             <option [value]="pay.days" *ngFor="let pay of tempPaymentFrequency">{{pay.days}}</option>
                         </select>
                         <mat-error
