--- a/gold-admin-frontend/src/app/views/partials/components/button/button.component.scss
+++ b/gold-admin-frontend/src/app/views/partials/components/button/button.component.scss
@@ -1,31 +1,39 @@
-:host{
-    .submit{
-        background-color: #454D67 !important; 
-    }
-    .cancel{
-        background-color: #bfc4d5 !important;
-    }
-    button:disabled {
-        background-color: rgb(224,224,224) !important;    
-    }
-    .reset{
-        background-color: #C43330 !important;
-    }
-    button {
-        // color: #bcc2d6 !important;
-        .submit{ 
-            color: #bcc2d6 !important;
-        }
-        .cancel{ 
-            color: #454d67 !important;
-        }
-        border-radius: 9px;
-        min-width: 85px;
-    }
-    .updateQty {
-        padding: 0.5rem !important;
-        font-size: 12px;
-        line-height: inherit;
-        min-width: 70px;
-    }
+:host {
+	.submit {
+		background-color: #454d67 !important;
+	}
+	.cancel {
+		background-color: #bfc4d5 !important;
+	}
+	button:disabled {
+		background-color: rgb(224, 224, 224) !important;
+	}
+	.reset {
+		background-color: #c43330 !important;
+	}
+	button {
+		// color: #bcc2d6 !important;
+		.submit {
+			color: #bcc2d6 !important;
+		}
+		.cancel {
+			color: #454d67 !important;
+		}
+		border-radius: 9px;
+		min-width: 85px;
+	}
+	.updateQty {
+		padding: 0.5rem !important;
+		font-size: 12px;
+		line-height: inherit;
+		min-width: 70px;
+	}
+
+	.global-map {
+		background-color: #454d67 !important;
+		height: 35px !important;
+		max-width: 35px !important;
+        min-width: 35px !important;
+        padding: 0;
+	}
 }
