--- a/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
+++ b/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
@@ -46,7 +46,7 @@
         </div>
         <div class="col-2 justify-content-end d-inline-flex align-self-center">
             <div *ngxPermissionsOnly="permissionType; then thenBlock"></div>
-            <kt-button  [value]="'G'" [type]='"button"' (click)="navigate()"
+            <kt-button  [value]="'../../../../../assets/media/icons/globe.svg'" [type]='"image"' (click)="navigate()"
                 class="kt-margin-r-10 kt-margin-l-10" *ngIf="globalMap">
             </kt-button>
             <kt-filter *ngIf="showfilter" (filterApplyEvent)="applyFilter($event)" [filterName]="filterName"
